Still getting issues with visibility, taking a break.

--- a/public/stylesheets/programs.css
+++ b/public/stylesheets/programs.css
@@ -198,6 +198,9 @@
     border: none;
 }
 
+#replyInputBox{
+    
+}
 #replyInputField{
     background-color: lightgray;
 }
